--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,19 @@
     line-height: 1.1;
   }
   
-  button {
+  .navbar {
+    border-radius: 8px;
+    border: 1px solid transparent;
+    padding: 0.6em 1.2em;
+    font-size: 1em;
+    font-weight: 500;
+    font-family: inherit;
+    background-color: #1C3F73;
+    background: #1C3F73;
+    cursor: pointer;
+    transition: border-color 0.25s;
+  }
+  /* button {
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
@@ -37,10 +49,13 @@
     background-color: #1C3F73;
     cursor: pointer;
     transition: border-color 0.25s;
-  }
-  button:hover {
+  } */
+  .nav-link:hover {
     border-color: #2E608C;
   }
+  /* button:hover {
+    border-color: #2E608C;
+  } */
   button:focus,
   button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
