--- a/src/index.css
+++ b/src/index.css
@@ -27,7 +27,7 @@
     line-height: 1.1;
   }
   
-  .navbar {
+ button {
     border-radius: 8px;
     border: 1px solid transparent;
     padding: 0.6em 1.2em;
@@ -38,6 +38,29 @@
     background: #1C3F73;
     cursor: pointer;
     transition: border-color 0.25s;
+  }
+
+  .nav {
+    background: #1C3F73;
+    color: #9ED7EC;
+  }
+
+  .nav-link:hover{
+    background: #2E608C;
+    color: #CED5E0;
+    
+  }
+
+  .profile {
+    border-radius: 50%; 
+    margin: 20px 0;
+    align-items: center;
+}
+
+  h1{
+    margin: 20px 0;
+    color: #0D6EFD;
+text-shadow: #1C3F73;
   }
   /* button {
     border-radius: 8px;
@@ -50,7 +73,7 @@
     cursor: pointer;
     transition: border-color 0.25s;
   } */
-  .nav-link:hover {
+  .nav-item:hover {
     border-color: #2E608C;
   }
   /* button:hover {
@@ -59,6 +82,15 @@
   button:focus,
   button:focus-visible {
     outline: 4px auto -webkit-focus-ring-color;
+  }
+
+  #footer{
+    background-color: #1C3F73;
+    color: #9ED7EC;
+    position: absolute;
+    bottom: 0;
+    width: 100%;
+    height: 2.5rem;   
   }
   
   @media (prefers-color-scheme: light) {
