--- a/src/index.css
+++ b/src/index.css
@@ -84,6 +84,15 @@ text-shadow: #1C3F73;
     outline: 4px auto -webkit-focus-ring-color;
   }
 
+  #page-container {
+    position: relative;
+    min-height: 100vh;
+  }
+  
+  #content-wrap {
+    padding-bottom: 2.5rem;
+  }
+
   #footer{
     background-color: #1C3F73;
     color: #9ED7EC;
